--- a/app/src/main/res/drawable/mybg.xml
+++ b/app/src/main/res/drawable/mybg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/monopolymain"
+    android:src="@drawable/monopolymainupscaled"
     android:tileMode="disabled"
-    android:gravity="bottom" />
+    android:gravity="bottom"
+    />
