Changed Layout Padding

--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -168,7 +168,7 @@
 
                 <Button
                     android:id="@+id/saveButton"
-                    android:layout_width="200dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
                     android:drawableTint="@color/black"
