Changed Layout in Home Page and added empty Host Game Page

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:contentDescription="@string/action_settings"
+        app:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
@@ -47,6 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/join_game"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/black"
+        android:foregroundTint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.239"
@@ -59,6 +64,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/host_game"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/black"
+        android:foregroundTint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.235"
