feat: created Lobby Page (Table with sample data, Back-Button, textView for key (not yet displayable)) fix(HostGame): changed seekBar values to contain more reasonable values feat(HostGame): added Error Checks for editText, added simple Key-Generator method (4-digit int) feat(JoinGame): added Error Checks for editText

--- a/app/src/main/res/layout/join_game.xml
+++ b/app/src/main/res/layout/join_game.xml
@@ -80,7 +80,7 @@
                 android:hint="@string/game_key"
                 android:inputType="text"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@android:color/darker_gray"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
 
@@ -119,7 +119,7 @@
                 android:hint="@string/username"
                 android:inputType="text"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColorHint="@android:color/darker_gray"
                 android:textSize="16sp"
                 tools:ignore="TouchTargetSizeCheck" />
 
