--- a/app/src/main/res/layout/lobby.xml
+++ b/app/src/main/res/layout/lobby.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HostGame">
+    >
 
     <ImageView
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/host_game"
+                android:text="@string/lobby"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -57,7 +57,57 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/back"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Host"
+                android:layout_margin="1dp"
+                android:background="#d2d2d2"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewHost"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="1dp"
+                android:background="#d2d2d2"
+                android:gravity="center"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:text="User1234567"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:orientation="horizontal"
+                android:layout_marginEnd="80dp"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/textViewKey"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             >
             <Button
                 android:layout_width="wrap_content"
@@ -66,88 +116,56 @@
                 android:visibility="invisible" />
 
             <TextView
-                android:id="@+id/textView66"
+                android:id="@+id/textView73"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/number_of_players"
+                android:gravity="center"
+                android:text="User 1"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:gravity="top|center_vertical"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:layout_weight="1"
-                android:max="4"
-                android:progress="2"
-                android:progressBackgroundTint="@color/white"
-                 />
 
             <TextView
-                android:id="@+id/textViewSeekBar"
+                android:id="@+id/textViewUser1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="4dp"
-                android:shadowColor="#000000"
-                android:shadowDx="4"
-                android:shadowDy="4"
-                android:shadowRadius="0.01"
-                android:gravity="bottom"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            >
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:visibility="invisible" />
-            <TextView
-                android:id="@+id/textView52"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/maximum_time_min"
+                android:gravity="center"
+                android:text="User1234567"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
-            <SeekBar
-                android:id="@+id/seekBar2"
-                style="@style/Widget.AppCompat.SeekBar.Discrete"
-                android:gravity="top|center_vertical"
-                android:layout_weight="1"
-                android:backgroundTint="@color/white"
-                android:foregroundTint="@color/white"
-                android:indeterminateTint="@color/white"
-                android:max="10"
-                android:progress="2"
-                android:progressBackgroundTint="@color/white"
-                 />
+
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/back"
+                android:visibility="invisible" />
 
             <TextView
-                android:id="@+id/textViewSeekBar2"
+                android:id="@+id/textView74"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="10dp"
-                android:gravity="bottom"
+                android:gravity="center"
+                android:text="User 2"
                 android:textColor="@color/white"
-                android:shadowColor="#000000"
-                android:shadowDx="4"
-                android:shadowDy="4"
-                android:shadowRadius="0.01"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewUser2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User1234567"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </TableRow>
-
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             >
             <Button
                 android:layout_width="wrap_content"
@@ -155,38 +173,30 @@
                 android:text="@string/back"
                 android:visibility="invisible" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:textAlignment="center"
-                android:layout_weight="1">
-
-                <EditText
-                    android:id="@+id/userInput"
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
-                    android:hint="@string/username"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:textSize="16sp"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </LinearLayout>
-            <Button
+            <TextView
+                android:id="@+id/textView75"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:visibility="invisible" />
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User 3"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewUser3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User1234567"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+
+
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             >
             <Button
                 android:layout_width="wrap_content"
@@ -194,41 +204,28 @@
                 android:text="@string/back"
                 android:visibility="invisible" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:textAlignment="center"
-                android:layout_weight="1">
-
-                <EditText
-                    android:id="@+id/lobbyInput"
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/white"
-                    android:hint="@string/lobbyname"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:textSize="16sp"
-                    tools:ignore="TouchTargetSizeCheck" />
-            </LinearLayout>
-            <Button
+            <TextView
+                android:id="@+id/textView76"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:visibility="invisible" />
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User 4"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
+            <TextView
+                android:id="@+id/textViewUser4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User1234567"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
             >
             <Button
                 android:layout_width="wrap_content"
@@ -236,37 +233,55 @@
                 android:text="@string/back"
                 android:visibility="invisible" />
 
+            <TextView
+                android:id="@+id/textView77"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User 5"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewUser5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="User1234567"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="end"
                 android:orientation="horizontal"
-                android:textAlignment="center"
+                android:layout_marginEnd="80dp"
                 android:layout_weight="1">
                 <Button
-                    android:id="@+id/create_button"
+                    android:id="@+id/startButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/white"
                     android:drawableTint="@color/black"
                     android:foregroundTint="@color/black"
                     android:textColor="@color/black"
-                    android:text="@string/create_lobby"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="12dp"
-                    android:paddingStart="30dp"
-                    android:paddingEnd="30dp"
+                    android:text="@string/start_game"
+
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:visibility="invisible" />
         </TableRow>
 
 
+
+
+
+
+
     </TableLayout>
+
+
 
 </FrameLayout>
