feat: added simple LobbyKey-class (+test-class) that generates a random number (4-digits) fix(HostGame): changed Layout for current seekBar-Value to be aligned with Thumb

--- a/app/src/main/res/layout/lobby.xml
+++ b/app/src/main/res/layout/lobby.xml
@@ -259,6 +259,7 @@
                 android:orientation="horizontal"
                 android:layout_marginEnd="80dp"
                 android:layout_weight="1">
+
                 <Button
                     android:id="@+id/startButton"
                     android:layout_width="wrap_content"
@@ -266,10 +267,11 @@
                     android:backgroundTint="@color/white"
                     android:drawableTint="@color/black"
                     android:foregroundTint="@color/black"
-                    android:textColor="@color/black"
                     android:text="@string/start_game"
+                    android:textColor="@color/black"
 
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
         </TableRow>
