--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.monopoly.FirstFragment"
+        android:name="com.example.monopoly.ui.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/JoinGame"
-        android:name="com.example.monopoly.JoinGame"
+        android:name="com.example.monopoly.ui.JoinGame"
         android:label="Join Game"
         tools:layout="@layout/join_game">
 
@@ -37,7 +37,7 @@
     </fragment>
     <fragment
         android:id="@+id/HostGame"
-        android:name="com.example.monopoly.HostGame"
+        android:name="com.example.monopoly.ui.HostGame"
         android:label="Host Game"
         tools:layout="@layout/host_game">
 
@@ -51,7 +51,7 @@
 
     <fragment
         android:id="@+id/Settings"
-        android:name="com.example.monopoly.Settings"
+        android:name="com.example.monopoly.ui.Settings"
         android:label="Settings"
         tools:layout="@layout/settings">
 
@@ -62,7 +62,7 @@
 
     <fragment
         android:id="@+id/Lobby"
-        android:name="com.example.monopoly.Lobby"
+        android:name="com.example.monopoly.ui.Lobby"
         android:label="Lobby"
         tools:layout="@layout/lobby">
 
