Added Zoom Function, Buttons, TextViews to GameBoard Fragment
- Added a Zoom Function from a custom Library (TouchImageView) and applied it to the GameBoard-ImageView
- Added Buttons for later use in Game
- Added TextViews for Information (current money, which turn it is, time)
- Added a Background to GameBoard Fragment
- Added Slider to ScrollView in Lobby and deleted one obsolete TextView

--- a/app/src/main/res/layout/lobby.xml
+++ b/app/src/main/res/layout/lobby.xml
@@ -16,7 +16,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:scrollbars="none">
+        android:scrollbars="vertical">
 
 
         <TableLayout
@@ -289,36 +289,6 @@
 
                     android:textSize="16sp"
                     tools:ignore="TouchTargetSizeCheck" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/back"
-                    android:visibility="invisible" />
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="User 4"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="User1234567"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
             </TableRow>
         </TableLayout>
     </ScrollView>
